--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,1 +1,19 @@
-{ "name": "mortgage-dashboard", "dependencies": { "axios": "^1.0.0", "recharts": "^2.0.0" } }
+{
+  "name": "smart-mortgage-frontend",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "start": "vite",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "vite": "^4.5.0",
+    "tailwindcss": "^3.4.0"
+  }
+}
